# automate-the-boring-stuff-with-python

./: main.py  packages_install.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
chapter10_reading_writing_files/: 10_mad_libs.py  11_regex_search.py  1_paths.py  2_working_directory.py  3_parts_of_filepaths.py  4_finding_file_sizes.py  5_finding_files_with_glob.py  6_checking_path_validity.py  7_file_reading_writing.py  8_mydata  8_shelve_module.py  9_project_generate_random_quiz_files.py
chapter13_web_scraping/: 1_requests.py  2_parsing_html_with_bs4.py  example3.html
chapter1_python_basics/: rectangle_printer.py
chapter2_flow_controls/: fizzBuzzNumber.py  safeTemp.py  safeTempExpr.py
chapter3_loops/: countHundred.py  example.html  exitExample.py  fiveTimes.py  forWhile.py  guessTheNumber.py  mySplitTest.py  rpsGame.py  swordfish.py  whileFiveTimes.py
chapter4_functions/: better_collatz_by_alex.py  coinflip.py  collatz.py  globalStatement.py  helloFunc2.py  magic8Ball.py  notRandomDice.py  sameNameError.py  sameNameLocalGlobal.py  spike.py  zeroDivide.py
chapter5_debugging/: box_print.py  buggy_adding_program.py  debug_cointoss.py  factorial_log.py  myProgramLog.txt  spam.py
chapter6_lists/: all_my_cats_2.py  coinflip_streaks.py  looping_test.py  magic8Ball2.py  passingReferences.py  quick_list_test.py
chapter7_dicts/: birthdays.py  characterCount.py  chessboard.py  chessboard_validator.py  fantasy_game_inventory.py  guest_picnic.py
chapter8_strings/: alternating_test.py  bullet_point_adder.py  pig_latin.py  table_printer.py  (+1 more)
(+89 files in other folders)
