[project]
name = "automate-the-boring-stuff-with-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "humre>=1.0.0",
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11.9",
    "pillow>=12.1.0",
    "pyperclip>=1.11.0",
    "python-docx>=1.2.0",
    "requests>=2.32.5",
    "selenium>=4.39.0",
]
